@@ -97,3 +97,12 @@ A special autoloader has been added that is just for use in debug mode. The
 new `sfAutoloadAgain` class will reload the standard symfony autoloader and
 search the filesystem for the class in question. The net effect is that you no
 longer have to run `symfony cc` after adding a new class to a project.
+
+Tests
+-----
+
+### Functional Tests
+
+When a request generates an exception, the `debug()` method of the response
+tester now outputs a readable text representation of the exception, instead of
+the normal HTML output. It makes debugging much more easier.
